--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <img
         height="300px"
-        src="./azmath.jpg"
+        src="./LinkedIN.png"
         alt="Syed Azmath"
       />
       <h1 class="counter">1000</h1>
